--- a/基于多态的职工管理系统/基于多态的职工管理系统.vcxproj.filters
+++ b/基于多态的职工管理系统/基于多态的职工管理系统.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="职工管理系统.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="workerManager.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="workerManager.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
